exit button on charts

--- a/mainapp/templates/mainapp/dashboard.html
+++ b/mainapp/templates/mainapp/dashboard.html
@@ -97,6 +97,10 @@
   margin: 5px;
 }
 */
+.custombtn{
+    color: #fff;
+    background-color: rgba(30, 136, 229, 1);
+}
 .vendor-button: {
     float: right;
     right: 120px;
@@ -128,9 +132,9 @@
     background-color: red;
     margin: 25px 25px 25px 25px;
 }
-#myBox1:fullscreen,#myBox2:fullscreen,#myBox3:fullscreen,#myBox4:fullscreen,#myBox5:fullscreen,#myBox6:fullscreen,#myBox7:fullscreen,#myBox8:fullscreen,#myBox9:fullscreen {
+#myBox1:fullscreen,#myBox2:fullscreen,#myBox3:fullscreen,#customer_card:fullscreen,#vendor_card:fullscreen,#myBox6:fullscreen,#myBox7:fullscreen,#myBox8:fullscreen,#myBox9:fullscreen {
     margin-top: 100px;
-    background-color: indigo;
+    /*background-color: indigo;*/
     width: 50%;
     height: 50%;
     overflow-x: scroll;
@@ -176,27 +180,30 @@
                 </div>
                 
                 <div class="card-header " id='normal_mode'>
-                    <button class="btn btn-sm btn-block btn-success"  onclick="toggleFullscreen()">Click to expand</button>
+                    <button class="btn btn-sm btn-block custombtn "  onclick="toggleFullscreen()">Click to expand</button>
                 </div>
                 <div class="card-header " style="display:none" id='fullscreen_mode'>
-                    <button class="btn btn-sm btn-success btn-block"  onclick="exitfull()">Click to exit full screen</button>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull()">Click to exit full screen</button>
                 </div>
             </div>
         </div>
         </div>
         <div class="col-md-6">
-            <div class="card1 card-chart cardbottom">
+            <div class="card1 card-chart cardbottom" id='myBox2'>
                 <!-- <div class="card-header">
                     <h5 class="card-category card_top">Daily Sales</h5>
                     <h3 class="card-title card_top"><i class="tim-icons icon-delivery-fast text-info"></i> 3,500</h3>
                 </div> -->
-                <div class="card-body" onclick="toggleFullscreen2()">
-                    <div class="chart-area card1" id='myBox2'>
+                <div class="card-body">
+                    <div class="chart-area card1" >
                       <canvas id="amount_by_category"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode2'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen2()">Click to expand</button>
+                </div>
+                <div class="card-header " style="display:none" id='fullscreen_mode2'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull2()">Click to exit full screen</button>
                 </div>
             </div>  
         </div>
@@ -207,18 +214,21 @@
 
 <div class="row row_side_padding">
         <div class="col-lg-4 column_side_padding">
-            <div class=" card1 card-chart cardbottom">
+            <div class=" card1 card-chart cardbottom" id='myBox3'>
                 <div class="card-header ">
                     <h5 class="card-category card_top">Total Employee</h5>
                     <h3 class="card-title card_top"><i class="tim-icons icon-bell-55 text-primary"></i> {{total_employee}}</h3>
                 </div>
-                <div class="card-body" onclick="toggleFullscreen3()">
-                    <div class="chart-area card1" id='myBox3'>
+                <div class="card-body">
+                    <div class="chart-area card1">
                         <canvas id="myChart" class="container"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode3'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen3()">Click to expand</button>
+                </div>
+                <div class="card-header " style="display:none" id='fullscreen_mode3'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull3()">Click to exit full screen</button>
                 </div>
             </div>
         </div>
@@ -230,67 +240,76 @@
                     <h5 class="card-category card_top">Total Customers</h5>
                     <div class="row card-title">
                         <div class="col-sm-4">
-                            <button class="btn btn-sm btn-info" onclick="function1()" class="buttonpadding">Customer</button>
+                            <button class="btn btn-sm btn-info" id= 'customerbtn1' onclick="function1()" class="buttonpadding">Customer</button>
                         </div>
                         <div class="col-sm-4">
                             <h3 class=" card_top"><i class="tim-icons icon-delivery-fast text-info"></i> {{total_customer}}</h3>
                         </div>
                         <div class="col-sm-4">
-                            <button class="btn btn-sm btn-info vendor-button pull-right" onclick="function2()" class="">Vendor</button>
+                            <button class="btn btn-sm btn-info vendor-button pull-right" id= 'vendorbtn1' onclick="function2()">Vendor</button>
                         </div>
 
                     </div>
                    <!--  <span> <button onclick="function1()" class="card-title">Customer</button>  <h3 class="card-title card_top"><i class="tim-icons icon-delivery-fast text-info"></i> {{total_customer}}</h3> <button onclick="function2()" class="card-title">Vendor</button></span> -->
                 </div>
-                <div class="card-body" onclick="toggleFullscreen4()">
-                    <div class="chart-area card1" id='myBox4'>
+                <div class="card-body">
+                    <div class="chart-area card1">
                       <canvas id="myChart2"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode4'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen4()">Click to expand</button>
                 </div>
-            </div> 
+                <div class="card-header " style="display:none" id='fullscreen_mode4'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull4()">Click to exit full screen</button>
+                </div>
+            </div>
             <div class=" card1 card-chart cardbottom" id="vendor_card" style="display:none">
                 <div class="card-header">
                     <h5 class="card-category card_top">Total Vendors</h5>
                     <div class="row">
                         <div class="col-sm-4">
-                            <button class="btn btn-sm btn-info buttonpadding" onclick="function1()" >Customer</button>
+                            <button class="btn btn-sm btn-info buttonpadding" id= 'customerbtn2' onclick="function1()" >Customer</button>
                         </div>
                         <div class="col-sm-4">
                             <h3 class="card-title card_top"><i class="tim-icons icon-delivery-fast text-info"></i> {{total_vendor}}</h3>
                         </div>
                         <div class="col-sm-4">
-                            <button class="btn btn-sm btn-info pull-right" onclick="function2()" class="card-title">Vendor</button>
+                            <button class="btn btn-sm btn-info pull-right" id= 'vendorbtn2' onclick="function2()" class="card-title">Vendor</button>
                         </div>
 
                     </div>
                 </div>
-                <div class="card-body" onclick="toggleFullscreen5()">
-                    <div class="chart-area card1" id='myBox5'>
+                <div class="card-body">
+                    <div class="chart-area card1">
                       <canvas id="vendor_chart"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode5'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen5()">Click to expand</button>
+                </div>
+                <div class="card-header " style="display:none" id='fullscreen_mode5'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull5()">Click to exit full screen</button>
                 </div>
             </div>
   </div>
 
         <div class="col-lg-4">
-            <div class=" card1 card-chart cardbottom">
+            <div class=" card1 card-chart cardbottom" id='myBox6'>
                 <div class="card-header">
                     <h5 class="card-category card_top">Total Production</h5>
                     <h3 class="card-title card_top"><i class="tim-icons icon-delivery-fast text-info"></i>{{total_production.amount__sum}}</h3>
                 </div>
-                <div class="card-body " onclick="toggleFullscreen6()">
-                    <div class="chart-area card1" id='myBox6'>
+                <div class="card-body ">
+                    <div class="chart-area card1">
                       <canvas id="myChart3" class="container"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode6'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen6()">Click to expand</button>
+                </div>
+                <div class="card-header " style="display:none" id='fullscreen_mode6'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull6()">Click to exit full screen</button>
                 </div>
             </div>
         </div>
@@ -298,7 +317,7 @@
 
     <div class="row row_side_padding">
         <div class="col-lg-4">
-            <div class=" card1 card-chart cardbottom">
+            <div class=" card1 card-chart cardbottom" id='myBox7'>
                 <div class="card-header">
                     <h5 class="card-category card_top">Maintenance Overhead</h5>
                     <div class="row">
@@ -311,34 +330,40 @@
                     </div>
                     <!-- <h3 class="card-title card_top"><i class="tim-icons icon-delivery-fast text-info"></i> {{total_maintenance_cost.cost__sum}}</h3> -->
                 </div>
-                <div class="card-body" onclick="toggleFullscreen7()">
-                    <div class="chart-area card1" id='myBox7'>
+                <div class="card-body" >
+                    <div class="chart-area card1" >
                       <canvas id="myChart4"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode7'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen7()">Click to expand</button>
+                </div>
+                <div class="card-header " style="display:none" id='fullscreen_mode7'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull7()">Click to exit full screen</button>
                 </div>
             </div>
         </div>
         <div class="col-lg-4">
-            <div class=" card1 card-chart cardbottom">
+            <div class=" card1 card-chart cardbottom" id='myBox8'>
                 <div class="card-header">
                     <h5 class="card_top">Total Machine Count</h5>
                     <h3 class="card_top"><i class="tim-icons icon-delivery-fast text-info"></i> {{total_machines}} </h3>
                 </div>
-                <div class="card-body " onclick="toggleFullscreen8()">
-                    <div class="chart-area card1" id='myBox8'>
+                <div class="card-body " >
+                    <div class="chart-area card1" >
                       <canvas id="myChart5"  class="container"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode8'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen8()">Click to expand</button>
+                </div>
+                <div class="card-header " style="display:none" id='fullscreen_mode8'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull8()">Click to exit full screen</button>
                 </div>
             </div>
         </div>
         <div class="col-lg-4">
-            <div class=" card1 card-chart cardbottom">
+            <div class=" card1 card-chart cardbottom"  id='myBox9'>
                 <div class="card-header">
                     <form id="submit_bookmark" method="POST">
                         {% csrf_token %}
@@ -359,13 +384,16 @@
                         
                       </form>
                 </div>
-                <div class="card-body" onclick="toggleFullscreen9()">
-                    <div class="chart-area card1" id='myBox9'>
+                <div class="card-body" >
+                    <div class="chart-area card1">
                       <canvas id="myChart6" class="container"></canvas>
                     </div>
                 </div>
-                <div class="card-header ">
-                    <button class="btn btn-sm btn-success" onclick="toggleFullscreen()">Click to expand</button>
+                <div class="card-header " id='normal_mode9'>
+                    <button class="btn btn-sm custombtn btn-block" onclick="toggleFullscreen9()">Click to expand</button>
+                </div>
+                <div class="card-header " style="display:none" id='fullscreen_mode9'>
+                    <button class="btn btn-sm custombtn btn-block"  onclick="exitfull9()">Click to exit full screen</button>
                 </div>
             </div>
         </div>
