--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -35,10 +35,10 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         {% if user.is_authenticated %}
-                        <a href="{% url 'application' %}" class="logo">KPI<em> Solutions</em></a>
+                        <a href="{% url 'application' %}" class="logo"><em> Saadhan</em></a>
                         {% else %}
                         <a class="logo" href="{% url 'index' %}">
-                          KPI<em> Solutions</em>
+                          <em> Saadhan</em>
                         </a>
                         {% endif %}
                         <!-- ***** Logo End ***** -->
