--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -1,5 +1,30 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'mainapp/home.html' %}
+{% block contact_content %}
+{% load crispy_forms_tags %}
 
-{% block content %}
-<p>Contact</p>
-{% endblock %}
+<div class="container contact">
+    <div class="row">
+        
+        <div class="col-md-12">
+
+            <form method="POST">
+                {% csrf_token %}
+
+            <div class="contact-form">
+                <div class="form-group">
+                    <div class="col-sm-10">          
+                    <!-- <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname"> -->
+                        <div style="color: black">{{form|crispy}}</div>
+                  </div>
+            </div>
+            <div class="form-group">        
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-info">Submit</button>
+                </div>
+                </div>
+            </div>
+        </form>
+        </div>
+    </div>
+</div>
+{% endblock %}}
