--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -1,6 +1,7 @@
 
 {% extends 'mainapp/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 <style type="text/css">
     .card_top,.button1 {
@@ -23,7 +24,20 @@
   transform: scale(1.05);
   box-shadow:0px 0px 10px 0.09px #0ff;
 }
+.imagepos{
+    background:linear-gradient(0deg, rgba(93, 173, 226, 0.8), rgba(93, 173, 226, 0.1)), url({% static 'img/display_image_2.jpg' %});
+  /*background-image: url({% static 'img/display_image_2.jpg' %});*/
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+  /*background-size: 100% 100%;*/
+  background-size: cover;
+  /*background-color: red;*/
+  /*opacity: 0.5;*/
 
+}
 </style>
 
 
@@ -149,44 +163,38 @@
            
         </div>
 </div>
-<div style="background-color: rgba(3, 155, 229, 0.7);">
-    <section class="section" id="contact-us">
-        <div class="container-fluid">
-                <div class="col-lg-12 col-md-6 col-xs-12">
-                    <div class="contact-form">
-                        <form id="contact" action="" method="post">
-                          <div class="row">
-                            <div class="col-md-6 col-sm-12">
-                              <fieldset>
-                                <input name="name" type="text" id="name" placeholder="Your Name*" required="">
-                              </fieldset>
+<div style="" >
+    <section class="section imagepos" id="contact-us" >
+        <!-- <div class="container-fluid"> -->
+                <!-- <div class="col-12"> -->
+                    <!-- <div class=" "> -->
+                        <div class="container contact g">
+                            <div class="row g">
+                                
+                                <div class="col-lg-12">
+
+                                    <form method="POST" class="">
+                                        {% csrf_token %}
+
+                                    <div class="">
+                                        <div class="form-group">
+                                            <div class="col-sm-10">
+                                                <div style="color: #2E86C1" class="">{{form|crispy}}</div>
+                                          </div>
+                                    </div>
+                                    <div class="form-group">        
+                                        <div class="col-sm-offset-2 col-sm-10">
+                                            <button type="submit" class="btn btn-info btn-block" onclick="message_cnfrm()">Submit</button>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </form>
+                                </div>
                             </div>
-                            <div class="col-md-6 col-sm-12">
-                              <fieldset>
-                                <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email*" required="">
-                              </fieldset>
-                            </div>
-                            <div class="col-md-12 col-sm-12">
-                              <fieldset>
-                                <input name="subject" type="text" id="subject" placeholder="Subject">
-                              </fieldset>
-                            </div>
-                            <div class="col-lg-12">
-                              <fieldset>
-                                <textarea name="message" rows="6" id="message" placeholder="Message" required=""></textarea>
-                              </fieldset>
-                            </div>
-                            <div class="col-lg-12">
-                              <fieldset>
-                                <button type="submit" id="form-submit" class="main-button">Send Message</button>
-                              </fieldset>
-                            </div>
-                          </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+                        </div>
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
     </section>
 </div>
     <!-- ***** Contact Us Area Ends ***** -->
@@ -203,4 +211,12 @@
             </div>
         </div>
     </footer>
+
+    <script type="text/javascript">
+        
+function message_cnfrm(){
+    alert('Thank You! Message Sent Succesfully. We will reach you out real soon!! :)');
+}
+
+    </script>
 {% endblock %}
